--- a/lib/i18n/strings_hi.i18n.json
+++ b/lib/i18n/strings_hi.i18n.json
@@ -15,6 +15,7 @@
       "स्पेनिश"
     ],
     "labels": {
+      "selected": "चयनित",
       "calendarDays": ["रवि", "सोम", "मंगल", "बुध", "गुरु", "शुक्र", "शनि"],
       "shortDays": ["सोम", "मंगल", "बुध", "गुरु", "शुक्र", "शनि", "रवि"],
       "shortMonths": [
@@ -162,6 +163,10 @@
         "title": "भाषाएँ",
         "description": "ऐप्लिकेशन में उपयोग करना चाहते भाषा का चयन करें।",
         "gptInfoDialog": "इस एप्लिकेशन में टेक्स्ट का अनुवाद करने के लिए GPT-3 एपीआई का उपयोग किया गया है, इसलिए अनुवाद 100% सटीक नहीं हो सकता। अगर आप अनुवादों में सुधार करने में मदद करना चाहते हैं, तो कृपया मुझसे संपर्क करें।",
+        "confirmDialog": {
+          "title": "भाषा बदलें?",
+          "subtitle": "क्या आप सुनिश्चित हैं कि आप भाषा बदलना चाहते हैं?\nपरिवर्तनों को लागू करने के लिए आपको एप्लिकेशन को पुनरारंभ करने की आवश्यकता है।"
+        },
         "changedLanguage": "भाषा बदल दी गई है, कृपया परिवर्तनों को लागू करने के लिए आवेदन को पुनरारंभ करें।"
       }
     },
