--- a/lib/i18n/strings_ja.i18n.json
+++ b/lib/i18n/strings_ja.i18n.json
@@ -15,6 +15,7 @@
       "スペイン語"
     ],
     "labels": {
+      "selected": "選択済み",
       "calendarDays": ["日", "月", "火", "水", "木", "金", "土"],
       "shortDays": ["月", "火", "水", "木", "金", "土", "日"],
       "shortMonths": [
@@ -162,6 +163,10 @@
         "title": "言語",
         "description": "アプリで使用する言語を選択してください。",
         "gptInfoDialog": "このアプリはGPT-3 APIを使用してテキストを翻訳しています。そのため、翻訳が100%正確であるとは限りません。翻訳の改善にご協力いただける場合は、お知らせください。",
+        "confirmDialog": {
+          "title": "言語を変更しますか？",
+          "subtitle": "言語を変更したいですか？\n変更を適用するには、アプリケーションを再起動する必要があります。"
+        },
         "changedLanguage": "言語が変更されました。アプリケーションを再起動して変更を適用してください。"
       }
     },
