--- a/lib/i18n/strings_ru.i18n.json
+++ b/lib/i18n/strings_ru.i18n.json
@@ -15,6 +15,7 @@
       "Испанский"
     ],
     "labels": {
+      "selected": "выбрано",
       "calendarDays": ["Вс", "Пн", "Вт", "Ср", "Чт", "Пт", "Сб"],
       "shortDays": ["Пн", "Вт", "Ср", "Чт", "Пт", "Сб", "Вс"],
       "shortMonths": [
@@ -162,6 +163,10 @@
         "title": "Языки",
         "description": "Выберите язык, который вы хотите использовать в приложении.",
         "gptInfoDialog": "Это приложение использует API GPT-3 для перевода текстов, поэтому переводы могут быть не на 100% точными. Если вы хотите помочь улучшить переводы, пожалуйста, свяжитесь со мной.",
+        "confirmDialog": {
+          "title": "Изменить язык?",
+          "subtitle": "Вы уверены, что хотите изменить язык?\nВам нужно перезагрузить приложение для применения изменений."
+        },
         "changedLanguage": "Язык был изменен, пожалуйста, перезапустите приложение для применения изменений."
       }
     },
