--- a/lib/i18n/strings_zh.i18n.json
+++ b/lib/i18n/strings_zh.i18n.json
@@ -15,6 +15,7 @@
       "西班牙语"
     ],
     "labels": {
+      "selected": "已选择",
       "calendarDays": ["日", "一", "二", "三", "四", "五", "六"],
       "shortDays": ["一", "二", "三", "四", "五", "六", "日"],
       "shortMonths": [
@@ -162,6 +163,10 @@
         "title": "语言",
         "description": "选择您想在应用程序中使用的语言。",
         "gptInfoDialog": "此应用程序使用GPT-3 API来翻译文本，因此翻译可能不是100%准确。如果您想帮助改进翻译，请联系我。",
+        "confirmDialog": {
+          "title": "改變語言？",
+          "subtitle": "您確定要更改語言嗎？\n您需要重新啟動應用程序以應用更改。"
+        },
         "changedLanguage": "語言已更改，請重新啟動應用程序以應用更改."
       }
     },
