🌐 i18n: add feedback link and functionality in settings

--- a/lib/i18n/strings_fr.i18n.json
+++ b/lib/i18n/strings_fr.i18n.json
@@ -66,7 +66,8 @@
       "restore": "Restaurer",
       "save": "Enregistrer",
       "accept": "Accepter",
-      "select": "Sélectionner"
+      "select": "Sélectionner",
+      "sendFeedback": "Envoyer des commentaires"
     },
     "utils": {
       "dateTimePicker": {
