--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -66,7 +66,8 @@
       "restore": "Restore",
       "save": "Save",
       "accept": "Accept",
-      "select": "Select"
+      "select": "Select",
+      "sendFeedback": "Send feedback"
     },
     "utils": {
       "dateTimePicker": {
