--- a/lib/i18n/strings_de.i18n.json
+++ b/lib/i18n/strings_de.i18n.json
@@ -66,7 +66,8 @@
       "restore": "Wiederherstellen",
       "save": "Speichern",
       "accept": "Akzeptieren",
-      "select": "Auswählen"
+      "select": "Auswählen",
+      "sendFeedback": "Feedback senden"
     },
     "utils": {
       "dateTimePicker": {
