--- a/lib/i18n/strings_es.i18n.json
+++ b/lib/i18n/strings_es.i18n.json
@@ -66,7 +66,8 @@
       "restore": "Restaurar",
       "save": "Guardar",
       "accept": "Aceptar",
-      "select": "Seleccionar"
+      "select": "Seleccionar",
+      "sendFeedback": "Enviar comentarios"
     },
     "utils": {
       "dateTimePicker": {
