--- a/lib/i18n/strings_id.i18n.json
+++ b/lib/i18n/strings_id.i18n.json
@@ -66,7 +66,8 @@
       "restore": "Pulihkan",
       "save": "Simpan",
       "accept": "Terima",
-      "select": "Pilih"
+      "select": "Pilih",
+      "sendFeedback": "Kirim umpan balik"
     },
     "utils": {
       "dateTimePicker": {
