--- a/lib/i18n/strings_ja.i18n.json
+++ b/lib/i18n/strings_ja.i18n.json
@@ -66,7 +66,8 @@
       "restore": "元に戻す",
       "save": "保存",
       "accept": "承諾",
-      "select": "選択"
+      "select": "選択",
+      "sendFeedback": "フィードバックを送信"
     },
     "utils": {
       "dateTimePicker": {
