--- a/lib/i18n/strings_pt.i18n.json
+++ b/lib/i18n/strings_pt.i18n.json
@@ -66,7 +66,8 @@
       "restore": "Restaurar",
       "save": "Salvar",
       "accept": "Aceitar",
-      "select": "Selecionar"
+      "select": "Selecionar",
+      "sendFeedback": "Enviar feedback"
     },
     "utils": {
       "dateTimePicker": {
