--- a/lib/i18n/strings_ru.i18n.json
+++ b/lib/i18n/strings_ru.i18n.json
@@ -66,7 +66,8 @@
       "restore": "Восстановить",
       "save": "Сохранить",
       "accept": "Принять",
-      "select": "Выбрать"
+      "select": "Выбрать",
+      "sendFeedback": "Отправить отзыв"
     },
     "utils": {
       "dateTimePicker": {
