--- a/lib/i18n/strings_zh.i18n.json
+++ b/lib/i18n/strings_zh.i18n.json
@@ -66,7 +66,8 @@
       "restore": "恢复",
       "save": "保存",
       "accept": "接受",
-      "select": "选择"
+      "select": "选择",
+      "sendFeedback": "发送反馈"
     },
     "utils": {
       "dateTimePicker": {
