--- a/lib/i18n/strings_es.i18n.json
+++ b/lib/i18n/strings_es.i18n.json
@@ -110,6 +110,7 @@
         "button": "Empezar"
       },
       "tutorial": {
+        "title": "Tutorial",
         "task1": "Toca la casilla izquierda para marcarla",
         "task2": "Toca la casilla izquierda para quitar la marca",
         "task3": "Desliza a la izquierda para eliminar esta tarea",
