--- a/lib/i18n/strings_hi.i18n.json
+++ b/lib/i18n/strings_hi.i18n.json
@@ -110,6 +110,7 @@
         "button": "शुरू करें"
       },
       "tutorial": {
+        "title": "ट्यूटोरियल",
         "task1": "जाँच करने के लिए बाईं चेकबॉक्स पर टैप करें",
         "task2": "टिक को हटाने के लिए बाईं चेकबॉक्स पर टैप करें",
         "task3": "इस कार्य को हटाने के लिए बाएँ स्वाइप करें",
