--- a/lib/i18n/strings_ja.i18n.json
+++ b/lib/i18n/strings_ja.i18n.json
@@ -110,6 +110,7 @@
         "button": "開始する"
       },
       "tutorial": {
+        "title": "チュートリアル",
         "task1": "左側のチェックボックスをタップしてチェックを入れる",
         "task2": "左側のチェックボックスをタップしてチェックを外す",
         "task3": "スワイプしてこのタスクを削除",
