--- a/lib/i18n/strings_ru.i18n.json
+++ b/lib/i18n/strings_ru.i18n.json
@@ -110,6 +110,7 @@
         "button": "Начать"
       },
       "tutorial": {
+        "title": "Как использовать это приложение",
         "task1": "Нажмите на левый флажок, чтобы отметить",
         "task2": "Нажмите на левый флажок, чтобы убрать отметку",
         "task3": "Смахните влево, чтобы удалить эту задачу",
