--- a/lib/i18n/strings_zh.i18n.json
+++ b/lib/i18n/strings_zh.i18n.json
@@ -110,6 +110,7 @@
         "button": "开始使用"
       },
       "tutorial": {
+        "title": "教程",
         "task1": "点击左侧复选框进行勾选",
         "task2": "点击左侧复选框取消勾选",
         "task3": "向左滑动以删除此任务",
