🌐 i18n: Add button clear and implement in TaskAdd

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -67,7 +67,8 @@
       "save": "Save",
       "accept": "Accept",
       "select": "Select",
-      "sendFeedback": "Send feedback"
+      "sendFeedback": "Send feedback",
+      "clear": "Clear"
     },
     "utils": {
       "dateTimePicker": {
