--- a/lib/i18n/strings_de.i18n.json
+++ b/lib/i18n/strings_de.i18n.json
@@ -67,7 +67,8 @@
       "save": "Speichern",
       "accept": "Akzeptieren",
       "select": "Auswählen",
-      "sendFeedback": "Feedback senden"
+      "sendFeedback": "Feedback senden",
+      "clear": "Löschen"
     },
     "utils": {
       "dateTimePicker": {
