--- a/lib/i18n/strings_es.i18n.json
+++ b/lib/i18n/strings_es.i18n.json
@@ -67,7 +67,8 @@
       "save": "Guardar",
       "accept": "Aceptar",
       "select": "Seleccionar",
-      "sendFeedback": "Enviar comentarios"
+      "sendFeedback": "Enviar comentarios",
+      "clear": "Limpiar"
     },
     "utils": {
       "dateTimePicker": {
