--- a/lib/i18n/strings_fr.i18n.json
+++ b/lib/i18n/strings_fr.i18n.json
@@ -67,7 +67,8 @@
       "save": "Enregistrer",
       "accept": "Accepter",
       "select": "Sélectionner",
-      "sendFeedback": "Envoyer des commentaires"
+      "sendFeedback": "Envoyer des commentaires",
+      "clear": "Effacer"
     },
     "utils": {
       "dateTimePicker": {
