--- a/lib/i18n/strings_hi.i18n.json
+++ b/lib/i18n/strings_hi.i18n.json
@@ -67,7 +67,8 @@
       "save": "सहेजें",
       "accept": "स्वीकार करें",
       "select": "चयन करें",
-      "sendFeedback": "प्रतिक्रिया भेजें"
+      "sendFeedback": "प्रतिक्रिया भेजें",
+      "clear": "साफ करें"
     },
     "utils": {
       "dateTimePicker": {
