--- a/lib/i18n/strings_id.i18n.json
+++ b/lib/i18n/strings_id.i18n.json
@@ -67,7 +67,8 @@
       "save": "Simpan",
       "accept": "Terima",
       "select": "Pilih",
-      "sendFeedback": "Kirim umpan balik"
+      "sendFeedback": "Kirim umpan balik",
+      "clear": "Bersihkan"
     },
     "utils": {
       "dateTimePicker": {
