--- a/lib/i18n/strings_pt.i18n.json
+++ b/lib/i18n/strings_pt.i18n.json
@@ -67,7 +67,8 @@
       "save": "Salvar",
       "accept": "Aceitar",
       "select": "Selecionar",
-      "sendFeedback": "Enviar feedback"
+      "sendFeedback": "Enviar feedback",
+      "clear": "Limpar"
     },
     "utils": {
       "dateTimePicker": {
