--- a/lib/i18n/strings_ru.i18n.json
+++ b/lib/i18n/strings_ru.i18n.json
@@ -67,7 +67,8 @@
       "save": "Сохранить",
       "accept": "Принять",
       "select": "Выбрать",
-      "sendFeedback": "Отправить отзыв"
+      "sendFeedback": "Отправить отзыв",
+      "clear": "Очистить"
     },
     "utils": {
       "dateTimePicker": {
